--- a/templates/Picts/layout.html
+++ b/templates/Picts/layout.html
@@ -7,8 +7,8 @@
 <body>
 <div class="top_bar">
     <div class="user_need" style="text-align: right">
-        <a onclick="this">注册</a>
-        <a onclick="this">/登录</a>
+        <a onclick="return false;">注册</a>
+        <a onclick="return false;">/登录</a>
     </div>
     <div class="ico" style="text-align: left">
         <img src="">aa
