--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href= {% static "style/index.css" %}>
 	<title>Picts</title>
 </head>
-<body>
+<body class="col-all">
     <div>
         <a href=""> 登录/注册</a>
     </div>
@@ -18,6 +18,7 @@
                 <form action="form_action.asp" method="get">
                     search: <input type="text" name="fname" />
                     <input type="submit" value="Submit" />
+                </form>
             </div>
           </form>
             <li><a href="">唯美风</a></li>
@@ -29,3 +30,12 @@
 		</div>
 </body>
 </html>
+{% load static %}
+<script type="text/javascript">
+    var name = "{% static 'background'  %}";
+    var last_name = {{ background_img_name|safe }}[0];
+    console.log(typeof (name));
+    console.log(typeof (last_name));
+    console.log(name);
+    document.body.setAttribute("background", name + '/' + last_name);
+</script>
