--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
 	<div>
         <ul class=daohanglan>
             <div class="12">
-                <form action="form_action.asp" method="get">
-                    search: <input type="text" name="fname" />
-                    <input type="submit" value="Submit" />
+                <form action="/photo/" method="post">
+                    search: <input type="text" name="information" />
+                    <input type="submit" value="搜索" />
                 </form>
             </div>
           </form>
