--- a/templates/photo.html
+++ b/templates/photo.html
@@ -11,6 +11,7 @@
 <body>
     <div class="pic_list_con">
         <h3><span>图片展示</span></h3>
+        {% for mit in search_photos %}
         <ul class="clearfix">
             <li><a href="" ><img src="/static/background/1.jpg" alt="商品图片"></a></li>
             <li><a href=""><img src="/static/background/2.jpg" alt="商品图片"></a></li>
@@ -30,7 +31,7 @@
             <li><a href=""><img src="/static/background/13.jpg" alt="商品图片"></a></li>
             <li><a href=""><img src="/static/background/14.jpg" alt="商品图片"></a></li>
         </ul>
-      
+      {% endfor %}
     </div>
 
 </body>
