--- a/Picts/static/style/photo.css
+++ b/Picts/static/style/photo.css
@@ -1,7 +1,15 @@
+.photo_father
+{
+    width: 320px;
+    height: 180px;
+    border: solid 1px red;
+    margin: 1%;
+    float: left;
+}
 img{
     width: 100%;
+    height: 100%;
 }
-
 a{
  
         width: 80%;
@@ -61,8 +69,8 @@ ul{
     margin:20px 0 13px 20px;
 }
 .pic_list_con ul li{
-    width:222px;
-    height:75px;
+    width:320px;
+    height:180px;
     /*多个div在一个页面上，默认情况是：一行一个div，但是只要在div的css中使用
     float：left，可以使一行有多个div，这样可以把网页划分成很多块，
     但是使用该属性会影响后面的元素，所有如果后面的div不想再被影响，
