--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 </head>
 <body class="col-all">
     <div>
-        <a href=""> 登录/注册</a>
+        <a href="/login/"> 登录</a>
+        <a href="/register/"> 注册</a>
     </div>
 	<div>
 
