--- a/templates/user.html
+++ b/templates/user.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form id="login_form" class="modal-content animate" action="#">
+    <form id="login_form" class="modal-content animate" action="/login/" method="post">
         <div class="imgcontainer">
             <span onclick="document.getElementById('login_form').style.display='none'" class="close"
                 title="Close Modal">&times;</span>
