--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,16 @@
 	<title>Picts</title>
 </head>
 <body class="col-all">
-    <div>
-        <a href="/login/"> 登录</a>
-        <a href="/register/"> 注册</a>
+    <div> <form action="/login/" method="get">
+                        <a href="">
+                            <button type="submit"  >登录</button>
+                        </a>
+                        </form>
+        <form action="/register/" method="get">
+                        <a href="">
+                            <button type="submit"  >注册</button>
+                        </a>
+                        </form>
     </div>
 	<div>
 
