--- a/templates/login.html
+++ b/templates/login.html
@@ -1,62 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        .error-msg{
-            color:red;
-        }
-    </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+  <link rel="stylesheet" href="/static/style/style.css">
+
 </head>
+
 <body>
-    <form action="/login/" method="POST">
-        <div>
-            <div>
-                {{ data.nick_name }}
-                {% if data.errors.nick_name %}
-                    <span class="error-msg">{{ data.errors.nick_name.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.password }}
-                {% if data.errors.password %}
-                    <span class="error-msg">{{ data.errors.password.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.city }}
-                {% if data.errors.city %}
-                    <span class="error-msg">{{ data.errors.city.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.occupation }}
-                {% if data.errors.occupation %}
-                    <span class="error-msg">{{ data.errors.occupation.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.portrait }}
-                {% if data.errors.portrait %}
-                    <span class="error-msg">{{ data.errors.portrait.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.sex }}
-                {% if data.errors.sex %}
-                    <span class="error-msg">{{ data.errors.sex.0 }}</span>
-                {% endif %}
-            </div>
-            <div>
-                {{ data.user_id }}
-                {% if data.errors.user_id %}
-                    <span class="error-msg">{{ data.errors.user_id.0 }}</span>
-                {% endif %}
-            </div>
-            >
-            <input type="submit" value="提交" />
+    <form id="login_form" class="modal-content animate" action="/login/" method="post">
+        <div class="imgcontainer">
+            <span onclick="document.getElementById('login_form').style.display='none'" class="close"
+                title="Close Modal">&times;</span>
+            <img src="/static/background/img_avatar.png" alt="Avatar" class="avatar">
+        </div>
+
+        <div class="container">
+
+            <span><b>用户名</b></span>
+            <input type="text" placeholder="请输入用户名" name="username" required>
+
+            <label><b>密&nbsp&nbsp码</b></label>
+            <input type="password" placeholder="请输入密码" name="password" required>
+
+            <button type="submit">登陆</button>
+            <input type="checkbox" checked="checked"> 记住我
+
+        </div>
+
+        <div class="container" style="background-color:#f1f1f1">
+            <button type="button" onclick="document.getElementById('login_form').style.display='none'"
+                class="cancelbtn">取消</button>
+            <span class="psw"><a href="#">忘记密码</a></span>
         </div>
     </form>
+
+
+    <script>
+       
+    </script>
+
+
+
+
 </body>
+
 </html>
