--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-  <link rel="stylesheet" href="/static/style/style.css">
-
+    {% load static %}
+    <link rel="stylesheet" href={% static 'style/login.css' %}>
+    <script src={% static 'scripts/modernizr-2.6.2.js' %}></script>
+    {% block scripts %} {% endblock %}
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="container">
 
             <span><b>用户名</b></span>
-            <input type="text" placeholder="请输入用户名" name="username" required>
+            <input type="text" placeholder="请输入用户名" name="user_id" required>
 
             <label><b>密&nbsp&nbsp码</b></label>
             <input type="password" placeholder="请输入密码" name="password" required>
