--- a/Picts/static/style/index.css
+++ b/Picts/static/style/index.css
@@ -1,37 +1,56 @@
-body{
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    position: absolute;
-    overflow: hidden;
+
+#all{
+    width: 800px;
+	height: 450px;
+	position:absolute;
+    top:40%;
+    left:31%;
+    margin:0px auto;
 }
 ul{/*设置导航栏的框框*/
-   margin: 300px auto;
-   width: 600px;
-   height: 3500px;
-  padding: 30px;
-  
+
+    margin: 0px auto ;
+    width: 600px;
+    height: 3500px;
+    padding: 30px;
+    position:absolute;
+
 }
 li{
-  list-style-type: none;
-  float: left;
+    list-style-type: none;
+    float: left;
 }
 
 
 a{
-				display: block;
-				width: 100px;
-				height: 50px;
-				font-family: Microsoft Yahei;
-				line-height: 50px;
-				background-color: crimson;
-				margin: 0px 0px;
-				color: #fff;
-				text-align: center;
-				text-decoration: none;
-				font-size: 15px;
-			}
+    display: block;
+    width: 50px;
+    height: 24px;
+    font-family: Microsoft Yahei;
+    line-height: 24px;
+    background-color: crimson;
+    margin: 0px auto;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    float: left;
+}
+button {
+
+    /*background-color: #4CAF50; !* Green *!*/
+    border: none;
+    color: white;
+    margin: 18px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    background-color:transparent;
+    text-shadow: 5px 5px 5px black;
+}
+
 
 a:hover{
-  background-color: #2f6f4f;
+    background-color: red;
 }
