--- a/templates/index.html
+++ b/templates/index.html
@@ -2,77 +2,56 @@
 <html lang="zh">
 <head>
     {% load static %}
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href= {% static "style/index.css" %}>
-	<title>Picts</title>
+    <title>Picts</title>
 </head>
 <body class="col-all">
-    <div> <form action="/login/" method="get">
-                        <a href="">
-                            <button type="submit"  >登录</button>
-                        </a>
-                        </form>
-        <form action="/register/" method="get">
-                        <a href="">
-                            <button type="submit"  >注册</button>
-                        </a>
-                        </form>
-    </div>
-	<div>
+<div>
+    <a href="/login/">登录</a>
+    <a href="/register/">注册</a>
+</div>
 
-        <ul class=daohanglan>
-            <div class="12">
-                <form action="/photo/" method="post">
-                    search: <input type="text" name="information" />
-                    <input type="submit" value="搜索" />
-                </form>
-{#                <form action="/photo/" method="post" enctype="multipart/form-data">#}
-{#                    <input class="file" type="file" name="pic"  />#}
-{#                    <input type="submit" value="提交文件">#}
-{#                </form>#}
-            </div>
-         
-                
-                <li>
-                    <form action="/photo/" method="post">
-                        <a href="">                        
-                            <button type="submit" formmethod="post" formaction="/photo/" name="information" value="唯美"  >唯美风</button>
-                        </a>
-                        </form>
-                </li>
-                <li>
-                    <form action="/photo/" method="post">
-                        <a href="">                        
-                            <button type="submit" formmethod="post" formaction="/photo/" name="information" value="哥特"  >哥特风</button>
-                        </a>
-                        </form>
-                </li>
-                <li>
-                    <form action="/photo/" method="post">
-                        <a href="">                        
-                            <button type="submit" formmethod="post" formaction="/photo/" name="information" value="性感"  >性感风</button>
-                        </a>
-                        </form>
-                </li>
-                <li>
-                    <form action="/photo/" method="post">
-                        <a href="">                        
-                            <button type="submit" formmethod="post" formaction="/photo/" name="information" value="可爱"  >可爱风</button>
-                        </a>
-                        </form>
-                </li>
-                <li>
-                    <form action="/photo/" method="post">
-                        <a href="">
-                            <button type="submit" formmethod="post" formaction="/photo/" name="information" value="慵懒"  >慵懒风</button>
-                        </a>
-                        </form>
-                </li>
+<div>
 
-			</ul>
-		</div>
+</div>
+<div id="all" >
+    <ul class=daohanglan>
+        <div class="12">
+            <form action="/photo/" method="post">
+                search: <input type="text" name="information" />
+                <input type="submit" value="搜索" />
+            </form>
+        </div>
+        <li>
+            <form action="/photo/" method="post">
+                <button type="submit" formmethod="post" formaction="/photo/" name="information" value="唯美"  >唯美风</button>
+            </form>
+        </li>
+        <li>
+            <form action="/photo/" method="post">
+                <button type="submit" formmethod="post" formaction="/photo/" name="information" value="哥特"  >哥特风</button>
+            </form>
+        </li>
+        <li>
+            <form action="/photo/" method="post">
+                <button type="submit" formmethod="post" formaction="/photo/" name="information" value="性感"  >性感风</button>
+            </form>
+        </li>
+        <li>
+            <form action="/photo/" method="post">
+                <button type="submit" formmethod="post" formaction="/photo/" name="information" value="可爱"  >可爱风</button>
+            </form>
+        </li>
+        <li>
+            <form action="/photo/" method="post">
+                <button type="submit" formmethod="post" formaction="/photo/" name="information" value="慵懒"  >慵懒风</button>
+            </form>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
 {% load static %}
