--- a/templates/photo.html
+++ b/templates/photo.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href= {% static "style/photo.css" %}>
-    <script src={% static "scripts/jquery-1.10.2.min.js" %} ></script>
+    <script src={% static "scripts/jquery-1.10.2.min.js" %}></script>
+    <script src={% static 'scripts/heart.js' %}></script>
     <title>tupian</title>
 </head>
-<body>
+<body onload=add_like_num()>
 <div class="pic_list_con">
     <h3>
-        <span>图片展示</span>
+        <span>图片展示{{ user_id }}</span>
     </h3>
-
     <ul class="clearfix">
         {% for mit in photos %}
             <li>
@@ -22,50 +22,19 @@
                 <article class="htmleaf-container">
                     <div id="container">
                         <div class="feed" id="feed1">
-                            <div class="heart" data-id={{ mit.pict_id }} rel="like">
+                            <div class="heart" data-id={{ mit.pict_id }} rel="like" onclick=checkoutclass(this,{{ user_id }})>
                                 <div>&#10084;</div>
                                 <div class="likeCount" id = {{  mit.pict_id }}>{{ mit.love_num }}
                                 </div>
                             </div>
-                        </div></div>
+                        </div>
+                    </div>
                 </article>
             </li>
         {% endfor %}
     </ul>
-
-
 </div>
-
 </body>
 </html>
 
-<script>
-    $(function () {
-        $(".heart").click(function () {
-            $(this).toggleClass('cs');
-        })
-    })
-    $(document).ready(function()
-    {
-        $('body').on("click",'.heart',function()
-        {
-            var father = $(this).attr("data-id");
-            var like_num = parseInt(document.getElementById(father).innerText)
-            $(this).css("background-position","")
-            var status = $(this).attr("rel");
-            if(status === 'like')
-            {
-                $("#"+father).html(like_num+1);
-                $(this).addClass("heartAnimation").attr("rel","unlike");
-            }
-            else
-            {
-                $("#"+father).html(like_num-1);
-                $(this).removeClass("heartAnimation").attr("rel","like");
-                $(this).css("background-position","left");
-            }
-        });
-
-    });
-</script>
 
